samples/chapter13/sample-preset-fail-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-preset-fail-pod
  labels:
    app: podpreset
spec:
  containers:
  - name: nginx-container
    image: nginx:1.12
