samples/chapter13/sample-preset-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-preset-pod
  annotations:
    podpreset.admission.kubernetes.io/exclude: "true"
  labels:
    app: podpreset
spec:
  containers:
    - name: nginx-container
      image: nginx:1.16
