samples/chapter13/sample-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-privileged
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
      ports:
      - containerPort: 80
      securityContext:
        privileged: true
