samples/chapter13/sample-rootfile-readonly.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-rootfile-readonly
spec:
  containers:
    - name: tools-container
      image: amsy810/tools:latest
      securityContext:
        readOnlyRootFilesystem: true
