samples/chapter13/sample-sysctl-old.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-sysctl-old
spec:
  containers:
    - name: tools-container
      image: amsy810/tools:latest
