samples/chapter13/sample-sysctl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-sysctl
spec:
  securityContext:
    sysctls:
    - name: net.core.somaxconn
      value: "12345"
  containers:
  - name: tools-container
    image: amsy810/tools:latest
